--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           cp -r plugify-module-dotnet/generator/* ./pps
           curl -o pps/s2sdk.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-source-2/refs/heads/main/s2sdk.pplugin.in
           curl -o pps/s2menu.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-menu_system/refs/heads/main/s2menu.pplugin.in
-          ls /pps
+          ls ./pps
           python ./pps/generator.py ./pps/s2sdk.pplugin.in ./pps/out
           python ./pps/generator.py ./pps/s2menu.pplugin.in ./pps/out
 
