--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
           ls ./pps
           python ./pps/generator.py ./pps/s2sdk.pplugin.in ./pps/out
           python ./pps/generator.py ./pps/s2menu.pplugin.in ./pps/out
+          cp -r ./pps/out/pps/* ./pps
+          ls ./pps
 
       - name: Restore dependencies
         run: dotnet restore
