--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,18 +29,18 @@ jobs:
 
       - name: Generate PPS Schemas
         run: |
-          mkdir pps
-          mkdir pps/out
+          mkdir PermissionsSystem/pps
+          mkdir PermissionsSystem/pps/out
           git clone --depth 1 https://github.com/untrustedmodders/plugify-module-dotnet.git
           curl -o plugify-module-dotnet/generator/s2sdk.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-source-2/refs/heads/main/s2sdk.pplugin.in
           curl -o plugify-module-dotnet/generator/s2menu.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-menu_system/refs/heads/main/s2menu.pplugin.in
           ls plugify-module-dotnet/generator
-          ls ./pps/out
-          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2sdk.pplugin.in ./pps/out
-          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2menu.pplugin.in ./pps/out
-          cp -r ./pps/out/pps/* ./pps
+          ls ./PermissionsSystem/pps/out
+          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2sdk.pplugin.in ./PermissionsSystem/pps/out
+          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2menu.pplugin.in ./PermissionsSystem/pps/out
+          cp -r ./PermissionsSystem/pps/out/pps/* ./pps
           echo ">>>>>>> Generated PPS Schemas"
-          ls ./pps
+          ls ./PermissionsSystem/pps
           echo ">>>>>>> Project Files"
           ls
 
