--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           ls ./PermissionsSystem/pps/out
           python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2sdk.pplugin.in ./PermissionsSystem/pps/out
           python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2menu.pplugin.in ./PermissionsSystem/pps/out
-          cp -r ./PermissionsSystem/pps/out/pps/* ./pps
+          cp -r ./PermissionsSystem/pps/out/pps/* ./PermissionsSystem/pps
           echo ">>>>>>> Generated PPS Schemas"
           ls ./PermissionsSystem/pps
           echo ">>>>>>> Project Files"
