--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,18 +30,11 @@ jobs:
       - name: Generate PPS Schemas
         run: |
           mkdir PermissionsSystem/pps
-          mkdir PermissionsSystem/pps/out
           git clone --depth 1 https://github.com/untrustedmodders/plugify-module-dotnet.git
           curl -o plugify-module-dotnet/generator/s2sdk.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-source-2/refs/heads/main/s2sdk.pplugin.in
           curl -o plugify-module-dotnet/generator/s2menu.pplugin.in https://raw.githubusercontent.com/untrustedmodders/plugify-menu_system/refs/heads/main/s2menu.pplugin.in
-          ls plugify-module-dotnet/generator
-          ls ./PermissionsSystem/pps/out
-          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2sdk.pplugin.in ./PermissionsSystem/pps/out
-          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2menu.pplugin.in ./PermissionsSystem/pps/out
-          echo ">>>>>>> Generated PPS Schemas"
-          ls ./PermissionsSystem/pps
-          echo ">>>>>>> Project Files"
-          ls
+          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2sdk.pplugin.in ./PermissionsSystem
+          python plugify-module-dotnet/generator/generator.py plugify-module-dotnet/generator/s2menu.pplugin.in ./PermissionsSystem
 
       - name: Restore dependencies
         run: dotnet restore
