--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,32 +42,32 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      # - name: Archive build output
-      #   if: startsWith(github.ref, 'refs/tags/')
-      #   run: |
-      #     mkdir -p release
-      #     zip -r release/build_output.zip ./bin
+      - name: Archive build output
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          mkdir -p release
+          zip -r release/build_output.zip ./bin
 
-      # - name: Create Release
-      #   if: startsWith(github.ref, 'refs/tags/')
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     draft: false
-      #     prerelease: false
-      #     body: |
-      #       Release notes for ${{ github.ref }}
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+          body: |
+            Release notes for ${{ github.ref }}
 
-      # - name: Upload Release Asset
-      #   if: startsWith(github.ref, 'refs/tags/')
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ./release/build_output.zip
-      #     asset_name: build_output.zip
-      #     asset_content_type: application/zip
+      - name: Upload Release Asset
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release/build_output.zip
+          asset_name: build_output.zip
+          asset_content_type: application/zip
