--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -43,33 +42,31 @@ jobs:
 
       - name: Build
         run: dotnet build --no-restore --configuration Release
+      
+      - uses: actions/upload-artifact@v4
+        with:
+          name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
+          path: bin/Release/net9.0
 
-      - name: Archive build output
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          mkdir -p release
-          zip -r release/build_output.zip ./bin
+  release:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/') # Only run on tag push
+    needs: build
+    steps:
+      - name: Download artifact
+      - uses: actions/download-artifact@v4
+        with:
+          name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
+          path: build
 
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Unzip artifact
+      #   run: unzip build/permissions_system_${{ env.GITHUB_SHA_SHORT }}.zip -d build
+
+      - name: Release ${{ github.ref }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-          body: |
-            Release notes for ${{ github.ref }}
-
-      - name: Upload Release Asset
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/build_output.zip
-          asset_name: build_output.zip
-          asset_content_type: application/zip
+          files: build/permissions_system_${{ env.GITHUB_SHA_SHORT }}.zip
