--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
       
+      - name: Publish artifact
       - uses: actions/upload-artifact@v4
         with:
           name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
@@ -58,9 +59,6 @@ jobs:
         with:
           name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
           path: build
-
-      # - name: Unzip artifact
-      #   run: unzip build/permissions_system_${{ env.GITHUB_SHA_SHORT }}.zip -d build
 
       - name: Release ${{ github.ref }}
         uses: softprops/action-gh-release@v2
