--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         run: dotnet build --no-restore --configuration Release
       
       - name: Publish artifact
-      - uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
           path: bin/Release/net9.0
@@ -55,7 +55,7 @@ jobs:
     needs: build
     steps:
       - name: Download artifact
-      - uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
           path: build
