--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: permissions_system_${{ env.GITHUB_SHA_SHORT }}
-          path: bin/Release/net9.0
+          path: PermissionsSystem/bin/Release/net9.0
 
   release:
     runs-on: ubuntu-latest
